# glycogrit-backend

./: .coveragerc  .dockerignore  .env.example  .gitignore  ACTIVITIES_MODULE_COMPLETE.md  ACTIVITIES_MODULE_PROGRESS.md  API_ENDPOINTS.md  ARCHITECTURE_IMPROVEMENTS.md  BACKEND_TEST_FIXES_COMPLETE.md  BULK_SHIPPING_WORKFLOW.md  Bulk Order Advance Excel File.xlsx  Bulk Order Basic Excel File.xlsx  CERTIFICATE_EXECUTIVE_SUMMARY.md  CERTIFICATE_FLOW_COMPLETE.md  CERTIFICATE_IMPLEMENTATION_PHASE1.md  CERTIFICATE_IMPLEMENTATION_SUMMARY.md  CERTIFICATE_QUICK_REFERENCE.md  CERTIFICATE_README.md  CERTIFICATE_TEMPLATE_CONFIG.md  CERTIFICATE_TESTING_COMPLETE.md  CERTIFICATE_TESTING_GUIDE.md  CERTIFICATE_USER_ADMIN_FLOWS.md  CI_CD_PIPELINE.md  CLAUDE_SKILLS_SETUP.md  CLEANUP_COMPLETE_SUMMARY.md  CLEANUP_STATUS.md  CODEBASE_SUMMARY.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DATABASE_ANALYSIS_SUMMARY.md  DATABASE_MANAGEMENT_BEST_PRACTICES.md  DATABASE_MIGRATION_GUIDE.md  DATABASE_SCHEMA.md  DATABASE_SCHEMA_EXPLAINED.md  DATABASE_SETUP.md  DDD_MIGRATION_PLAN.md  DDD_MIGRATION_PROGRESS.md  DDD_MIGRATION_SESSION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_ISSUE_AND_FIX.md  DEPLOYMENT_STATUS.md  (+102 more)
.claude/: README.md  code-review.config.json  doc-sync.config.json  managed-settings.json  wiki-context.config.json  wiki-updater.config.json
.claude/skills/: code-quality-guardian.md  code-review.md  codebase-summary-maintainer.md  database-patterns.md  doc-sync.md  impact-analysis-testing.md  wiki-context.md  wiki-updater.md
.github/workflows/: deploy.yml  test-on-push.yml
alembic/: env.py
alembic/versions/: 004_add_email_unique_constraint.py  20260416_001_initial_tables.py  20260416_002_add_challenge_fields.py  20260417_003_add_oauth_fields.py  20260419_1418_36343d051da4_add_strava_integration_tables.py  20260421_1639_0d82f1241dd7_add_certificate_type_and_payment_.py  20260421_1649_ee92ac1e10d4_add_razorpay_fields_to_payments.py  20260421_1713_99b3f79156bf_add_generic_gateway_fields_to_payments.py  20260422_1224_add_user_profile_fields.py  20260425_add_goodie_unlock_verification.py  (+57 more)
app/: main.py
cli/: DEMO.md  QUICKSTART.md  README.md  SHIPROCKET_CONFIG.md  __init__.py  auth_manager.py  shiprocket.py
database_scripts/: 001_initial_schema.sql  002_extensions_indexes_migration.sql  003_rollback_indexes.sql  MIGRATION_README.md  QUICK_START.md  README.md  db_manager.py  deploy_to_railway.md  run_migrations.py  seed_data.sql
docs/: ADDRESS_SYSTEM.md  ADOPTION_CHECKLIST.md  API_MIGRATION_EXAMPLES.md  ARCHITECTURE_SUMMARY.md  INDEX.md  MIGRATION_GUIDE.md  MODULAR_ARCHITECTURE.md  MODULE_EXPORTS_INDEX.md  PERFORMANCE_BENCHMARKING.md  QUICK_REFERENCE.md  ROLLBACK_PROCEDURES.md  SCHEMA_CLEANUP_PLAN.md  TESTING_GUIDELINES.md
migrations/: add_external_certificate_fields.sql
scripts/: README.md  add_events_via_api.py  add_sample_events.py  check_events.sql  check_token_health.py  configure_shiprocket.py  insert_one_sample_event.sql  insert_sample_events.sql  insert_sample_events_fixed.sql  insert_with_organizer_check.sql  populate_statistics.py  quick_update_password.py  railway-deploy.sh  refresh_instagram_token.py  setup_shiprocket_simple.py  test_insert_debug.sql  test_shiprocket_auth.py  update_shiprocket_password.py
tests/: README.md  conftest.py  test_payment_expiry.py  test_payment_verification_locking.py  test_webhook_idempotency.py
(+392 files in other folders)
